Changed BG color to White

--- a/assignment.css
+++ b/assignment.css
@@ -92,7 +92,7 @@ input[type="submit"]:hover {
 }
 
 body{
-  background-color:cyan;
+  background-color:white;
   font-size: 70;
   height:100%; 
 }
